fix css on subrace component on mobile and desktop

--- a/src/components/Subclasses/subclasses.scss
+++ b/src/components/Subclasses/subclasses.scss
@@ -46,6 +46,8 @@
   .subclasses {
     &__img {
       width: 500px;
+      margin-top:1rem;
+      margin-bottom: 1rem;
     }
   }
 }
