--- a/src/components/Subraces/subraces.scss
+++ b/src/components/Subraces/subraces.scss
@@ -2,24 +2,31 @@
 
 .subraces{
   &__mainclass--title{
-    display: initial;
-    margin-left: vars.$gutter;
-    font-weight: 800
+    // display: initial;
+    // margin-left: vars.$gutter;
+    text-align: center;
+    font-family: vars.$policeTitle;
+    font-size: 2.5rem;
   }
   &__img {
-    width: 160px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 260px;
     height: 90%;
     margin-top: 25%;
     margin-bottom: 15%;
   }
   &__mainclass--description{
-    margin-left: vars.$gutter*0.5;
-    margin-right: vars.$gutter*0.5;
+    margin-left: vars.$gutter;
+    margin-right: vars.$gutter;
     margin-top: vars.$gutter;
   }
   &__title{
     text-align: center;
-    font-weight: 800
+    font-size: 1.5rem;
+    font-family: vars.$policeTitle;
+    margin: vars.$gutter;
   }
   &__presentation--name{
     text-align: center;
@@ -28,38 +35,32 @@
   }
   &__presentation--description{
     margin-top: vars.$gutter;
-    margin-left: vars.$gutter*0.5;
-    margin-right: vars.$gutter*0.5;
+    margin-left: vars.$gutter;
+    margin-right: vars.$gutter;
   }
   &__presentation--trait{
     margin-top: vars.$gutter;
-    margin-left: vars.$gutter*0.5;
-    margin-right: vars.$gutter*0.5;
+    margin-left: vars.$gutter;
+    margin-right: vars.$gutter;
   }
   &__presentation--caracteristics--element{
     margin-top: vars.$gutter;
     text-align: center;
 
   }
+  &__presentation--span {
+    font-weight: 600;
+  }
 }
-// .subraces {
-//   margin-top: 8rem;
-//   &__mainclass {
-//     text-align: center;
-//   }
-//   &__img {
-//     width: 50%;
-//   }
-// }
-// h2 {
-//   padding: vars.$gutter * 2;
-//   text-decoration: none;
-// }
-// @media  all and (min-width:768px) {
-//   #subraces {
-//       text-align: center;
-//     }
-//     .subraces__presentation {
-//      display: flex; 
-//     }
-// }
+@media  screen and(min-width: 1024px){
+  .subraces {
+    margin-left: vars.$gutter * 1.5;
+    margin-right: vars.$gutter * 1.5;
+    &__img {
+      width: 500px;
+      margin-top: 1.5rem;
+      margin-bottom: 2rem;
+    }
+  }
+}
+
